@@ -6,7 +6,7 @@
 
     <groupId>com.sgswit</groupId>
     <artifactId>appleBatch</artifactId>
-    <version>3.2.7</version>
+    <version>3.2.8</version>
     <name>appleBatch</name>
 
     <properties>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.26</version>
+            <version>5.8.20</version>
         </dependency>
         <dependency>
             <groupId>cn.wanghaomiao</groupId>
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.2.2</version>
+            <version>11.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.dlsc.formsfx</groupId>
@@ -110,25 +110,17 @@
             <artifactId>bcprov-jdk18on</artifactId>
             <version>1.75</version>
         </dependency>
-
         <dependency>
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
             <version>1.10</version>
         </dependency>
 
-        <!-- 本地install一下 https://gitee.com/mumangguo/ddddocr-for-java -->
-        <!-- mvn install:install-file -Dfile=lib/ddddocr4j-1.0.jar -DgroupId=com.mmg -DartifactId=ddddocr4j -Dversion=1.0 -Dpackaging=jar -DgeneratePom=true -->
+        <!--打码（先本地install一下,注意版本) https://github.com/GCS-ZHN/ddddocr-for-java-->
         <dependency>
-            <groupId>com.mmg</groupId>
-            <artifactId>ddddocr4j</artifactId>
+            <groupId>top.gcszhn</groupId>
+            <artifactId>d4ocr</artifactId>
             <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.83</version> <!-- 使用最新稳定版本 -->
         </dependency>
 
         <dependency>
@@ -144,94 +136,108 @@
             <scope>compile</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.microsoft.onnxruntime</groupId>
-            <artifactId>onnxruntime</artifactId>
-            <version>1.16.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.microsoft.onnxruntime</groupId>-->
+<!--            <artifactId>onnxruntime</artifactId>-->
+<!--            <version>1.16.0</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
     <build>
         <plugins>
-            <!-- 原有编译器插件 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
-
             <plugin>
-                <groupId>org.panteleyev</groupId>
-                <artifactId>jpackage-maven-plugin</artifactId>
-                <version>1.6.4</version>
-                <configuration>
-                    <name>AppleBatch</name>
-                    <appVersion>${project.version}</appVersion>
-                    <runtimeImage>${java.home}</runtimeImage>
-                    <mainClass>com.sgswit.fx.AppLauncher</mainClass>
-                    <destination>target/dist</destination>
-                    <javaOptions>
-                        <option>--enable-preview</option>
-                        <option>-Dfile.encoding=UTF-8</option>
-                        <option>-Djava.library.path=lib</option>
-                    </javaOptions>
-                </configuration>
-
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
                 <executions>
                     <execution>
-                        <id>mac</id>
+                        <!-- Default configuration for running with: mvn clean javafx:run -->
+                        <id>default-cli</id>
                         <configuration>
-                            <icon>${project.basedir}/src/resources/image/icons.icns</icon>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>win</id>
-                        <configuration>
-                            <icon>image/icon.ico</icon>
-                            <winMenu>true</winMenu>
+                            <mainClass>com.sgswit.fx/com.sgswit.fx.AppLauncher</mainClass>
+                            <launcher>app</launcher>
+                            <jlinkZipName>app</jlinkZipName>
+                            <jlinkImageName>app</jlinkImageName>
+                            <noManPages>true</noManPages>
+                            <stripDebug>true</stripDebug>
+                            <noHeaderFiles>true</noHeaderFiles>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
 
             <plugin>
-                <groupId>io.github.janix520</groupId>
-                <artifactId>maven-easypackage-plugin</artifactId>
-                <version>1.4.1</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.5.5</version>
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/assembly/fatjar.xml</descriptor>
+                    </descriptors>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.sgswit.fx.AppLauncher</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <!--下面是为了使用 mvn package命令，如果不加则使用mvn assembly-->
+                <executions>
+                    <execution>
+                        <id>make-assemble</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+            <!-- javapackager mac打包关掉代理  -->
+            <!-- javapackager  -->
+            <!-- https://mvnrepository.com/artifact/io.github.fvarrui/javapackager -->
+            <plugin>
+                <groupId>io.github.fvarrui</groupId>
+                <artifactId>javapackager</artifactId>
+                <version>1.6.7</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
-                            <goal>jpackage</goal>
+                            <goal>package</goal>
                         </goals>
+                        <configuration>
+                            <version>3.2.8</version>
+                            <name>Apple批量处理</name>
+                            <!-- mandatory -->
+                            <mainClass>com.sgswit.fx.AppLauncher</mainClass>
+                            <!--是否绑定默认jre-->
+                            <bundleJre>true</bundleJre>
+                            <!--是否绑自定义jre-->
+                            <customizedJre>false</customizedJre>
+                            <generateInstaller>false</generateInstaller>
+                            <!--是否需要管理员权限安装-->
+                            <administratorRequired>false</administratorRequired>
+                            <platform>windows</platform>
+                            <!--                            <platform>mac|windows</platform>-->
+                            <classpath>lib/bcprov-jdk18on-1.75.jar</classpath>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <!-- 是否是最小打包，用于精简虚拟机，有的库依赖老旧的库，解析依赖会出错，true如果打包不成功，就改成false -->
-                    <minimum>true</minimum>
-                    <!--应用程序名称-->
-                    <name>Apple批量处理</name>
-                    <!--主运行类-->
-                    <mainClass>com.sgswit.fx.AppLauncher</mainClass>
-                    <!--是否显示控制台-->
-                    <winConsole>false</winConsole>
-                    <!--应用程序图标-->
-                    <icon>${project.basedir}/src/main/resources/image/icon.icns</icon>
-                    <!--可选app-image、exe、msi、rpm、deb、pkg、dmg，msi需要另外一个程序配合，app-image是exe绿色版，exe是安装包，其他自行搜索-->
-                    <type>dmg</type>
-                    <appVersion>${project.version}</appVersion>
-                    <copyright>apple_batch</copyright>
-                    <vendor>apple_batch</vendor>
-                    <description>apple_batch</description>
-                </configuration>
-
             </plugin>
-
         </plugins>
     </build>
 
